Fix toolbox so it can be seen on mobile

--- a/paint-canvas.css
+++ b/paint-canvas.css
@@ -21,11 +21,8 @@ body {
   display: none;
 }
 
-.fullscreen ~ .tools {
-  position: absolute;
-}
-
 .tools {
+  position: fixed;
   border: 1px solid;
   top: 0;
   right: 0;
